# dobble-analyze

./: .gitignore
dobbler/: .autotools  .cproject  .gitignore  .project  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  dobble_solution_n_3_symbols_7_von_7_cards_6_von_7.txt  dobble_solution_n_3_symbols_7_von_7_cards_7_von_7.txt  dobble_solution_n_4_symbols_13_von_13_cards_13_von_13.txt  dobble_solution_n_5_symbols_21_von_21_cards_12_von_21.txt  dobble_solution_n_5_symbols_21_von_21_cards_13_von_21.txt  dobble_solution_n_5_symbols_21_von_21_cards_18_von_21.txt  dobble_solution_n_5_symbols_21_von_21_cards_21_von_21.txt  dobble_solution_n_6_symbols_31_von_31_cards_16_von_31.txt  dobble_solution_n_6_symbols_31_von_31_cards_17_von_31.txt  dobble_solution_n_6_symbols_31_von_31_cards_19_von_31.txt  dobble_solution_n_6_symbols_31_von_31_cards_27_von_31.txt  dobble_solution_n_6_symbols_31_von_31_cards_31_von_31.txt  dobble_solution_n_7_symbols_43_von_43_cards_19_von_43.txt  dobble_solution_n_7_symbols_43_von_43_cards_20_von_43.txt  dobble_solution_n_7_symbols_43_von_43_cards_21_von_43.txt  dobble_solution_n_7_symbols_43_von_43_cards_22_von_43.txt  dobble_solution_n_7_symbols_43_von_43_cards_23_von_43.txt  dobble_solution_n_7_symbols_43_von_43_cards_25_von_43.txt  dobble_solution_n_8_symbols_57_von_57_cards_23_von_57.txt  dobble_solution_n_8_symbols_57_von_57_cards_24_von_57.txt  dobble_solution_n_8_symbols_57_von_57_cards_27_von_57.txt  (+1 more)
dobbler/doc/: dobble.odt
(+19 files in other folders)
